--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <html>
 <head>
-	<title>
-	My new app
-	</title>
+	<title>The new website</title>
 
 </head>
 <body>
-	Home page.
+	<div id="container">
+		<header>
+			<div id="left_header">
+				<h1>The real estate</h1>
+			</div>
+			<nav>
+				<ul>
+					<li>Home</li>
+					<li>Gallery</li>
+					<li>Our Work</li>
+					<li>Our Services</li>
+				</ul>
+			</nav>
+			<div class="clearfix"></div>
+		</header>
+		<main>
+			
+		</main>
+	</div>
 </body>
 </html>
