--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>The new website</title>
-
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 	<div id="container">
@@ -20,8 +20,9 @@
 			<div class="clearfix"></div>
 		</header>
 		<main>
-			
+			<section></section>
 		</main>
+		<footer></footer>
 	</div>
 </body>
 </html>
