main area added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="clearfix"></div>
 		</header>
 		<main>
-			<section></section>
+			<div class="red"></div>
 		</main>
 		<footer></footer>
 	</div>
