--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
 		</header>
 		<main>
 			<div class="red"></div>
+			<section>
+				<h1>About Us</h1>
+				<article>
+					
+				</article>
+			</section>
+
 		</main>
-		<footer></footer>
+		<footer>
+			<h3>copyright</h3>
+
+		</footer>
 	</div>
 </body>
 </html>
