--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
 		</main>
 		<footer>
-			<h3>copyright</h3>
-
+		<section>
+		<hr>
+			<h3>© 2017 GABI UK</h3>
+		</section>
 		</footer>
 	</div>
 </body>
