main container changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-	<div id="container">
+	<div id="home">
 		<header>
 			<div id="left_header">
 				<h1>The real estate</h1>
@@ -43,12 +43,16 @@
 			</section>
 
 		</main>
-		<footer>
+		
+	</div>
+	<div class="clearfix"></div>
+	<div class="container">
+	<footer>
 		<section>
 		<hr>
 			<h3>© 2017 GABI UK</h3>
 		</section>
 		</footer>
-	</div>
+		</div>
 </body>
 </html>
