--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<div id="home">
 		<header>
 			<div id="left_header">
-				<h1>The real estate</h1>
+				<h1>My app</h1>
 			</div>
 			<nav>
 				<ul>
