--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</nav>
 			<div class="clearfix"></div>
 		</header>
-		<main>
+		
 			<div class="red"></div>
 			<section>
 				<h1>About Us</h1>
@@ -39,20 +39,21 @@
 					<div class="art_description">Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa.</div>
 				
 				</article>
-					<div class="clearfix"></div>
+				
 			</section>
-
-		</main>
-		
-	</div>
-	<div class="clearfix"></div>
-	<div class="container">
+			
+			</div>
+				<div class="clearfix"></div>
+			<div class="second_section">
+				<h1>About Us</h1>
+			</div>
+	
 	<footer>
-		<section>
+		<div class="footer">
 		<hr>
 			<h3>© 2017 GABI UK</h3>
-		</section>
-		</footer>
 		</div>
+		</footer>
+		
 </body>
 </html>
