--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 				<div class="clearfix"></div>
 			<div class="second_section">
 				<h1>About Us</h1>
+				<p>Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa.</p>
 			</div>
 	
 	<footer>
