--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+	<meta charset="UFT-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-AU-Compatible" content="ie=edge">
 	<title>The new website</title>
 	<link rel="stylesheet" href="styles/style.css">
 </head>
