--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 			<div class="clearfix"></div>
 		</header>
 		
-			<div class="red"></div>
-			
+			<div class="red">
+				<img src="images/Hair.jpg">
+			</div>
+
 			<section>
 				<h1>About Us</h1>
 				<hr>
