--- a/gallery.html
+++ b/gallery.html
@@ -15,10 +15,10 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="#">Gallery</a></li>
 					<li><a href="ourwork.html">Our Work</a></li>
-					<li><a href="ourservices.html">Our Services</a></li>
+					<li><a href="ourservices.html">Our Services</
 				</ul>
 			</nav>
 			<div class="clearfix"></div>
