--- a/ourwork.html
+++ b/ourwork.html
@@ -15,18 +15,15 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="ourwork.html">Our Work</a></li>
+					<li><a href="#">Our Work</a></li>
 					<li><a href="ourservices.html">Our Services</a></li>
 				</ul>
 			</nav>
 			<div class="clearfix"></div>
 		</header>
 		
-			<div class="red">
-				<img src="images/Hair.jpg">
-			</div>
 
 			<section>
 				<h1>About Us</h1>
