some changes on the middle section

--- a/gallery.html
+++ b/gallery.html
@@ -15,14 +15,14 @@
 	<div id="home">
 		<header>
 			<div id="left_header">
-				<h1>My app</h1>
+				<h1>My photo app</h1>
 			</div>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="#">Gallery</a></li>
 					<li><a href="ourwork.html">Our Work</a></li>
-					<li><a href="ourservices.html">Our Services</
+					<li><a href="ourservices.html">Our Services</a></li>
 				</ul>
 			</nav>
 			<div class="clearfix"></div>
