--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div id="home">
 		<header>
 			<div id="left_header">
-				<h1>My app</h1>
+				<h1>My photo app</h1>
 			</div>
 			<nav>
 				<ul>
@@ -29,23 +29,25 @@
 		</header>
 		
 			<div class="red">
-				<img src="images/Hair.jpg">
+				<img src="images/611.jpg">
 			</div>
-
 			<section>
-				<h1>About Us</h1>
-				<hr>
-				<article>
+			<h1>My Work</h1>
+			<article>
+					<img src="images/841.jpg">
 					<div class="art_title"><h3>First</h3></div>
-					<div class="art_description">Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa.</div>
+					<div class="art_description">
+Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa.</div>
 
 				</article>
 					<article>
+					<img src="images/565.jpg">
 					<div class="art_title"><h3>First</h3></div>
 					<div class="art_description">Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa.</div>
 				
 				</article>
 					<article>
+					<img src="images/904.jpg">
 					<div class="art_title"><h3>First</h3></div>
 					<div class="art_description">Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa.</div>
 				
