--- a/gallery.html
+++ b/gallery.html
@@ -32,10 +32,20 @@
 				<h1>Gallery</h1>
 				<hr>
 				<div class="myGallery">
-
+					<section>
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+					</section>
 				</div>
 			</section>
-	
+		<div class="clearfix"></div>
 		<footer>
 			<div class="footer">
 				<hr>
