--- a/ourwork.html
+++ b/ourwork.html
@@ -28,11 +28,17 @@
 			</nav>
 			<div class="clearfix"></div>
 		</header>
-		<div>
-
+		<div class="my_work">
+			<img src="images/311.jpg">
+			<p>Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa.</p>
 		</div>
-		
-
+		<div class="clearfix"></div>
+		<div class="my_work_article">
+			<h1>All about our work.</h1>
+			<hr>
+			<p>Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa.</p>
+		</div>
+		<div class="clearfix"></div>
 	<footer>
 		<div class="footer">
 		<hr>
