--- a/ourservices.html
+++ b/ourservices.html
@@ -28,8 +28,8 @@
 			</nav>
 			<div class="clearfix"></div>
 		</header>
-		
-
+		<div class="clearfix"></div>
+	</div>
 	<footer>
 		<div class="footer">
 		<hr>
