our services page changed

--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
 	<div id="home">
 		<header>
 			<div id="left_header">
-				<h1>My photo app</h1>
+				<h1>My photo studio</h1>
 			</div>
 			<nav>
 				<ul>
@@ -27,26 +27,27 @@
 			</nav>
 			<div class="clearfix"></div>
 		</header>
-		
-			<section>
-				<h1>Gallery</h1>
-				<hr>
-				<div class="myGallery">
-					<section>
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-					</section>
-				</div>
-			</section>
-		<div class="clearfix"></div>
 		</div>
+			
+				<div class="myGallery">
+					
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+						<img src="images/sun.JPG">
+					
+				</div>
+		
+		<div class="clearfix"></div>
+		
 		<footer>
 			<div class="footer">
 				<hr>
