--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-	<div id="home">
+		<div id="home">
 		<header>
 			<div id="left_header">
-				<h1>My photo app</h1>
+				<h1>My photo studio</h1>
 			</div>
 			<nav>
 				<ul>
@@ -27,12 +27,13 @@
 			</nav>
 			<div class="clearfix"></div>
 		</header>
-		
+		</div>
 			<div class="red">
 				<img src="images/611.jpg">
 			</div>
+				<div id="home">
 			<section>
-			<h1>My Work</h1>
+			<h1>What We Do</h1>
 			<article>
 					<img src="images/775.jpg">
 					<div class="art_title"><h3>First</h3></div>
