--- a/ourservices.html
+++ b/ourservices.html
@@ -16,7 +16,7 @@
 	<div id="home">
 		<header>
 			<div id="left_header">
-				<h1>My photo app</h1>
+				<h1>My photo studio</h1>
 			</div>
 			<nav>
 				<ul>
@@ -28,8 +28,23 @@
 			</nav>
 			<div class="clearfix"></div>
 		</header>
-		<div class="clearfix"></div>
-	</div>
+		</div>
+		<div class="img1">
+			<h1>Weddings</h1>
+		</div>
+		<div class="img2">
+			<h1>Portraits</h1>
+		</div>
+		<div class="img3">
+			<h1>Editorial</h1>
+		</div>
+		<div class="img4">
+			<h1>Creative</h1>
+		</div>
+		<div class="img5">
+			<h1>Product Photography</h1>
+		</div>
+	
 	<footer>
 		<div class="footer">
 		<hr>
