--- a/gallery.html
+++ b/gallery.html
@@ -31,18 +31,18 @@
 			
 				<div class="myGallery">
 					
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
-						<img src="images/sun.JPG">
+						<img src="images/img4.JPG">
+						<img src="images/img5.JPG">
+						<img src="images/img4.JPG">
+						<img src="images/img5.JPG">
+						<img src="images/img4.JPG">
+						<img src="images/img5.JPG">
+						<img src="images/img4.JPG">
+						<img src="images/img5.JPG">
+						<img src="images/img4.JPG">
+						<img src="images/img5.JPG">
+						<img src="images/img4.JPG">
+						<img src="images/img5.JPG">
 					
 				</div>
 		
