--- a/gallery.html
+++ b/gallery.html
@@ -49,12 +49,13 @@
 		
 		<div class="clearfix"></div>
 		
-		<footer>
-			<div class="footer">
-				
-				<h3>© 2017 GABI UK</h3>
-			</div>
-		</footer>
-		
+			<footer>
+		<div class="footer">
+			<li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
+			<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
+			<li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
+			<h3>© 2017 GABI UK</h3>
+		</div>
+	</footer>
 </body>
 </html>
