--- a/index.html
+++ b/index.html
@@ -69,12 +69,15 @@ Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha 
 				</div>
 			</div>
 	
-	<footer>
+		<footer>
 		<div class="footer">
-		
+			<li><i class="fa fa-facebook-official"></i></li>
+			<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
+			<li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
 			<h3>© 2017 GABI UK</h3>
 		</div>
-		</footer>
+	</footer>
+		
 		
 </body>
 </html>
