--- a/ourservices.html
+++ b/ourservices.html
@@ -48,10 +48,12 @@
 	
 	<footer>
 		<div class="footer">
-		
+			<li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
+			<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
+			<li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
 			<h3>© 2017 GABI UK</h3>
 		</div>
-		</footer>
+	</footer>
 		
 </body>
 </html>
