--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
 	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -74,6 +74,7 @@ Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha 
 			<li><i class="fa fa-facebook-official"></i></li>
 			<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
 			<li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
+			
 			<h3>© 2017 GABI UK</h3>
 		</div>
 	</footer>
