--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="home">
 		<header>
 			<div id="left_header">
-				<h1>My photo studio</h1>
+				<h1>Photo studio</h1>
 			</div>
 			<nav>
 				<ul>
