more media queries added

--- a/ourservices.html
+++ b/ourservices.html
@@ -30,6 +30,7 @@
 			<div class="clearfix"></div>
 		</header>
 		</div>
+		<div class="clearfix"></div>
 		<div class="img1">
 			<h1>Weddings</h1>
 		</div>
