more queries added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="clearfix"></div>
 		</header>
 		</div>
-			<div class="red">
+			<div class="first_section">
 				<img src="images/611.jpg">
 			</div>
 				<div id="home">
