subscribe button added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@ Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha 
 			<li><i class="fa fa-facebook-official"></i></li>
 			<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
 			<li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
-			
+
+			<form>
+				<label>Sign up for our news!</label><br>
+				<input type="email" placeholder="email address">
+				<button>Subscribe!</button>
+			</form>
+			<div class="clearfix"></div>
 			<h3>© 2017 GABI UK</h3>
 		</div>
 	</footer>
