--- a/ourwork.html
+++ b/ourwork.html
@@ -46,6 +46,12 @@
 			<li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
 			<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
 			<li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
+			<form>
+				<label>Sign up for our news!</label><br>
+				<input type="email" placeholder="email address">
+				<button>Subscribe!</button>
+			</form>
+			<div class="clearfix"></div>
 			<h3>© 2017 GABI UK</h3>
 		</div>
 	</footer>
