--- a/ourservices.html
+++ b/ourservices.html
@@ -11,13 +11,14 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 	<div id="home">
 		<header>
 			<div id="left_header">
-				<h1>Photo studio</h1>
+				<h1 class="logo">Photo studio</h1>
 			</div>
 			<nav>
 				<ul>
@@ -46,16 +47,28 @@
 		<div class="img5">
 			<h1>Product Photography</h1>
 		</div>
-	
-	<footer>
-		<div class="footer">
-			<li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
+		<div class="footer-logo">
+		<h1 class="logo">Photo studio</h1>
+		<li><i class="fa fa-facebook-official"></i></li>
 			<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
 			<li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
+		<div class="clearfix"></div>
+			<div class="nav-footer">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="gallery.html">Gallery</a></li>
+					<li><a href="ourwork.html">Our Work</a></li>
+					<li><a href="ourservices.html">Our Services</a></li>
+				</ul>
+			</div>
+		</div>
+	<footer>
+		<div class="footer">
+			
 			<form>
-				<label>Sign up for our news!</label><br>
-				<input type="email" placeholder="email address">
-				<button>Subscribe!</button>
+				<label>Join The Newsletter!</label><br>
+				<input type="email" class="form-control" placeholder="email address">
+				<button  class="btn btn-block">Subscribe!</button>
 			</form>
 			<div class="clearfix"></div>
 			<h3>© 2017 GABI UK</h3>
