--- a/ourservices.html
+++ b/ourservices.html
@@ -12,6 +12,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
 	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+	<link rel="stylesheet" href="styles/animate.css">
 	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -48,7 +49,7 @@
 			<h1>Product Photography</h1>
 		</div>
 		<div class="footer-logo">
-		<h1 class="logo">Photo studio</h1>
+		<h1 class="logo-footer">Photo studio</h1>
 		<li><i class="fa fa-facebook-official"></i></li>
 			<li><i class="fa fa-twitter-square" aria-hidden="true"></i></li>
 			<li><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
@@ -74,6 +75,7 @@
 			<h3>© 2017 GABI UK</h3>
 		</div>
 	</footer>
-		
+		<script src="styles/bootstrap.min.js"></script>
+		<script src="app.js"></script>
 </body>
 </html>
