some design changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div id="home">
 		<header>
 			<div id="left_header">
-				<h1>Photo studio</h1>
+				<h1 class="logo">Photo studio</h1>
 			</div>
 			<nav>
 				<ul>
