--- a/ourwork.html
+++ b/ourwork.html
@@ -44,9 +44,17 @@
 			<hr>
 			<p>Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa.</p>
 		</div>
+		<div class="testimon-title">
+			<h2>Testimonials</h2>
+			</div>
+			
 		<div class="testimon">
-			<div class="testimon-title">
-			<h2>Clients Testimonials</h2>
+		<p class="prev"><i class="fa fa-chevron-left" aria-hidden="true"></i></p>
+			<div class="testimon-body active">
+			<h4>David Johnson</h4>
+			<div class="clients">
+				<p>" Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa. "</p>
+			</div>
 			</div>
 			<div class="testimon-body">
 			<h4>David Johnson</h4>
@@ -54,8 +62,16 @@
 				<p>" Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa. "</p>
 			</div>
 			</div>
+			<div class="testimon-body">
+			<h4>David Johnson</h4>
+			<div class="clients">
+				<p>" Bacon ipsum dolor amet beef ribs burgdoggen fatback turkey pork. T-bone picanha alcatra pork, sirloin fatback chuck kielbasa meatloaf pig beef ribs. Shoulder ground round tail, tri-tip pork chop burgdoggen corned beef t-bone. Drumstick pig spare ribs, t-bone burgdoggen tenderloin shank boudin shoulder beef ribs salami. Tri-tip kielbasa pig, fatback ground round chicken beef ribs. Meatball tongue rump alcatra ham hock, swine landjaeger kielbasa. "</p>
+			</div>
+			</div>
+			<p class="next"><i class="fa fa-chevron-right" aria-hidden="true"></i></p>
 		</div>
-
+		
+		<div class="clearfix"></div>
 			<div class="footer-logo">
 		<h1 class="logo-footer">Photo studio</h1>
 		<li><i class="fa fa-facebook-official"></i></li>
